# todo-app

./: .gitignore  README.md
.github/workflows/: backend_ci.yml  frontend_ci.yml  main_ci.yml
backend/: pyproject.toml
backend/config/: api.py  settings.py  urls.py
backend/todo/: api.py  schemas.py  tests.py
frontend/: .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/lib/: axios.ts
frontend/src/mocks/: handlers.ts
