[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.3",
    "ruff>=0.15.12",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
plugins = ["django_stubs_pyright.main"]
